<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MyPageActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kakao_default_profile_image" />


        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginBottom="@dimen/margin_1x"
            android:text="@string/my_page_nickname"
            />

        <TextView
            android:id="@+id/tv_mypetmily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginBottom="@dimen/margin_1x"
            android:layout_marginStart="@dimen/margin_1x"
            android:layout_gravity="left"
            android:text="@string/my_page_mypetmily"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_pet_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStrat="@dimen/margin_1x"
                app:srcCompat="@drawable/kakao_default_profile_image" />

        </LinearLayout>


        <!--       my page 밑 부분 항목 : 중복 확인 -->


        <TextView
            android:id="@+id/tv_my_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginBottom="@dimen/margin_1x"
            android:layout_gravity="left"
            android:text="@string/my_page_my_pick"
            />

        <TextView
            android:id="@+id/tv_my_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginBottom="@dimen/margin_1x"
            android:layout_gravity="left"
            android:text="@string/my_page_my_review"
            />

        <TextView
            android:id="@+id/tv_alarm_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginBottom="@dimen/margin_1x"
            android:layout_gravity="left"
            android:text="@string/my_page_alarm_setting"
            />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/margin_1x"
            android:layout_marginBottom="@dimen/margin_1x"
            android:layout_gravity="left"
            android:text="@string/my_page_setting"
            />




    </LinearLayout>



</ScrollView>